--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -1,18 +1,18 @@
 \apendice{Plan de Proyecto Software}
 
 \section{Introducción}
-En este apartado trabajaremos sobre la planificación del proyecto, de tal manera que se pueda definir, identificar y programar las actividades específicas que se requieren para realizar las tareas del mismo. 
+En este apartado se trabaja sobre la planificación del proyecto, de tal manera que se pueda definir, identificar y programar las actividades específicas que se requieren para realizar las tareas del mismo. 
 
 La evolución temporal es una de las partes más importantes de todo el proceso de desarrollo, ya que una mala planificación, puede hacer que el proyecto sufra retrasos, de tal manera, que no se llegue a la fecha de entrega prevista, lo que supone un coste, en este caso, el suspenso, pero también el económico, por las horas y recursos destinados a tal fin.
 
- En esta fase es muy importante que para cada una de las tareas, sepamos el tiempo que durará aproximadamente, quien es el encargado de hacer la tarea y el dinero que supone hacerla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades en el futuro.
+En esta fase es muy hacer una estimación lo más precisa posible, definir quien es el encargado de hacer la tarea y el dinero que supondría hacerla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades que se pueden presenta en el futuro.
 
 La viabilidad pone el foco en el coste económico del proyecto como de la parte legal. Es decir, es un reactivo limitante, sobre todo el coste.
 
 \section{Planificación temporal}
-El método de trabajo para hacer el seguimiento y la planificación del mismo es \emph{Scrum}, que pretende realizar una gestión ágil del proyecto. Se basa en \emph{spints}, la duración de estos suele rondar entre los siete y quince días. Dependiendo de los requisitos del proyecto, número de integrantes y del tiempo disponible, se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacerlos de 5 días. 
+El método de trabajo para hacer el seguimiento y la planificación del mismo es \emph{Scrum}, que pretende realizar una gestión ágil del proyecto. Se basa en \emph{spints}, la duración de estos suele rondar entre los siete y quince días. Además esto depende de los requisitos del proyecto, número de integrantes y del tiempo disponible. Así se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacer cada una de las iteraciones en 5 días. 
 
-Estos \emph{sprints} se basan en una reunión, donde se planifican todas las tareas que se tiene como objetivo realizar, en mi caso eran las reuniones eran los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meetting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
+Estos \emph{sprints} se basan en una reunión, donde se planifican todas las tareas que se pretenden realizar. En mi caso dichas reuniones eran con los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meetting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
 
 Aclarar que la estimación del tiempo se realiza mediante los \emph{story points}, que indican la complejidad de la tarea a realizar. Esta herramienta nos la aporta ZenHub, con la siguiente relación según el coste temporal, que podemos ver en la siguiente tabla~\ref{tabla:storypoint}
 
@@ -40,15 +40,15 @@ A continuación se detallan cada uno de los \emph{sprints} realizados durante el
 
 \subsection{Sprint 1 (22/06/20 - 26/06/20)}\label{sprint-2-220620---260620}
 
-El inicio del proyecto fue a través de correo, explicando la situación a mis tutores, de que lo que estaba haciendo no me funcionaba, que estaba verde y que si cabía la posibilidad de hacer otro trabajo. Me dieron el visto bueno, pero que tenía que hacer algo diferenciador, ya que no vale cualquier cosa. Por lo que en la reunión de cierre de \emph{sprint} se comentaría como centrar la aplicación. 
+El inicio del proyecto fue a través de correo, explicando la situación a mis tutores. Para comenzar, les sugerí cambiar el tema, ya que había elegido algo de investigación con poca documentación. Me dieron el visto bueno, pero me propusieron hacer algo diferenciador. Por lo que en la reunión de cierre de \emph{sprint} se comentaría como centrar la aplicación. 
 
-Entonces debido a la escasez temporal, me decido a hacer una aplicación en \emph{Flutter}, ya que se puede hacer algo de calidad de manera ágil.
+Debido a la escasez temporal, decidí hacer una aplicación en \emph{Flutter}, ya que se puede diseñar algo de calidad de manera ágil.
 
-Los objetivos en este \emph{sprint} inicial fueron:
+Los objetivos en este \emph{sprint} inicial fueron los siguientes:
 
 \begin{itemize}
 \item Documentar como hacer aplicaciones en \emph{Flutter}.
-\item Cursar un curso en \href{https://www.udemy.com/course/flutter-primeros-pasos/}{Udemy}
+\item Realizar un curso en \href{https://www.udemy.com/course/flutter-primeros-pasos/}{Udemy}
 \item Crear el repositorio.
 \item Implementar el cuerpo de la aplicación.
 \item Investigar sobre \emph{apis} que ofrece el \emph{framework}.
@@ -56,15 +56,15 @@ Los objetivos en este \emph{sprint} inicial fueron:
 
 Todas las \emph{issues} realizadas para este \emph{sprint}, están disponibles en \href{https://github.com/scc0034/flutter_serpiente/milestone/1?closed=1}{Sprint 1}
 
-La estimación fue de 54 horas, pero que finalmente se destinaron 45,5 horas, debido en gran parte a la reutilización de código del curso, aunque el curso me duró más de lo estimado.
+La estimación fue de 54 horas, pero que finalmente se destinaron 45,5 horas, debido en gran parte a la reutilización de código del curso, aunque dicha formación duró más tiempo de lo que se había estimado.
 
 \imagen{burndowns/sp1.png}{Sprint 1.}
 
 %%% SPRINT 2
 \subsection{Sprint 2 (27/06/20 - 01/07/20)}\label{sprint-1-270620---010720}
-En este segundo incremento de la aplicación, definimos que el proyecto iba a ser una colección de juegos, que podría usarse como \emph{portfolio}, por lo que los juegos eran nada más que el hilo conductor para tocar el mayor número de herramientas posible. 
+En este segundo incremento de la aplicación, se definió que el proyecto iba a ser una colección de juegos, además podría usarse como \emph{portfolio}, por lo que los juegos eran el hilo conductor para tocar el mayor número de herramientas posible. 
 
-Los objetivos planteados fueron:
+Los objetivos planteados fueron los siguientes:
 \begin{itemize}
 	\item Persistencia de datos, con base de datos local.
 	\item Conectar con firebase para usar la base de datos que proporciona.
@@ -80,13 +80,13 @@ Las diferentes \emph{issues} planificadas están en \href{https://github.com/scc
 
 \imagen{burndowns/sp2.png}{Sprint 2.}
 
-En la reunión del cierre del seguimiento del sprint se muestra la \href{https://github.com/scc0034/flutter_serpiente/releases/tag/V.2.0.0/}{v.2.0.0}, viendo que los objetivos propuesto para este \emph{sprint} se han logrado a excepción de los anuncios, que por diversos motivos no se muestran.
+En la reunión del cierre del seguimiento del sprint se muestra la \href{https://github.com/scc0034/flutter_serpiente/releases/tag/V.2.0.0/}{v.2.0.0}, viendo que los objetivos propuestos para este \emph{sprint} se han logrado a excepción de los anuncios, que por diversos motivos no se muestran.
  	
-Se estimaron unas 53 horas, pero se acabaron destinando 45 horas que dieron para completar las tareas.
+Se estimaron unas 53 horas, pero se acabaron destinando 45 horas, que sirvieron para completar todas las tareas.
 
 %%%SPRINT 3
 \subsection{Sprint 3 (02/07/20 - 06/07/20)}\label{sprint-3-020720---070720}
-En esta iteración de la aplicación se debía de añadir un juego más para que tenga sentido como una colección de juegos. Se me propuso una idea de juego, que consistía en mover unas tuberías de agua hasta cerrar un circuito. Descarte esa opción a medida que podía explotar la funcionalidad de tener una base de datos en tiempo real, por lo que el juego, al final, fue el cuatro en raya online. Además de la mejora constante del producto.
+En esta iteración de la aplicación se debía de añadir un juego más para que tenga sentido como una colección de juegos. La propuesta de juego consistía en mover unas tuberías de agua hasta cerrar un circuito. Descarte esa opción a medida que podía explotar la funcionalidad de tener una base de datos en tiempo real. Finalmente el juego elegido fue el cuatro en raya online. Además de la mejora constante del producto.
 
 Los objetivos planificados fueron:
 \begin{itemize}
@@ -100,21 +100,21 @@ Los objetivos planificados fueron:
 	\item Crear la primera estructura del juego cuatro en raya.
 	\item Realizar las pruebas necesarias para un despliegue de la aplicación en entorno web.
 	\item Solucionar algunos problemas de la play store.
-	\item Continuar con la memoria y anexos.
+	\item Continuar con la realización de la memoria y anexos.
 \end{itemize}
 
 Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/flutter_serpiente/milestone/3?closed=1}{Sprint 3}
 
 \imagen{burndowns/sp3.png}{Sprint 3.}
 
-Al final en la reunión del cierre de este \emph{Sprint}, con los tutores, quedaba claro que gran parte de las tareas fueron completadas. En cuanto al tema del juego, no se puedo hacer más que la estructura del mismo, pero que para el siguiente, debería de quedar terminado.
+Al final en la reunión del cierre de este \emph{Sprint} con los tutores, quedó claro que gran parte de las tareas fueron completadas. En cuanto al tema del juego, no se pudo hacer más que la estructura del mismo, pero para la siguiente iteación del producto debería de quedar terminado.
 
-En cuanto a las horas que planifique para la documentación de la memoria, solo hice el 17\% de las 12 horas que me propuse. En gran parte fue debido a que destiné algunas más horas a otras tareas o que soy demasiado optimista a la hora de hacer la planificación.
+En cuanto a las horas planificadas para la documentación de la memoria, solo hice el 17\% de las 12 horas que me propuse. En gran parte fue debido a que destiné algunas horas más a otras tareas o que fui demasiado optimista a la hora de planificar.
 
-Se estimaron unas 58 horas, pero al final se emplearon 44,5. Todas las tareas se completaron a excepción del despliegue de la aplicación en el entorno web, debido a unos problemas con las compilaciones, y de las 10 horas que sobreestime para la memoria.
+Se estimaron unas 58 horas, pero finalmente se emplearon 44,5. Todas las tareas se completaron a excepción del despliegue de la aplicación en el entorno web, debido a unos problemas con las compilaciones, y de las 10 horas no invertidas en la redacción de la memoria.
 
 \subsection{Sprint 4 (07/07/20 - 10/07/20)}\label{sprint-4-070720---100720}
-La duración de este \emph{Sprint} es de un día menor, porque coincidía el cierre de este en sábado. Por lo que se pasa de los cinco días de duración normal, a cuatro. Lo que se plantea es tener el juego terminado además de añadir un chat que aporte valor añadido.
+La duración de este \emph{Sprint} es de un día menos, porque coincidía el cierre en sábado. Por lo que se pasa de los cinco días de duración normal, a cuatro. Lo que se plantea es tener el juego terminado además de añadir un chat que aporte valor añadido.
 
 Las pretensiones para este \emph{sprint} son:
 \begin{itemize}
@@ -127,7 +127,7 @@ Las pretensiones para este \emph{sprint} son:
 	\item Mejoras generales en el rendimiento.
 	\item Indentar y elimnar los warnings del código.
 	\item Capacidad de mandar mensajes entre los jugadores.
-	\item Reunión con amigo para el poster.
+	\item Reunión con el diseñador del póster, para explicar los requisitos.
 	\item Resolución de algunos problemas.
 \end{itemize}
 
@@ -135,7 +135,7 @@ Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/f
 
 \imagen{burndowns/sp4.png}{Sprint 4.}
 
-Para el cierre el total de las tareas fueron completadas, se planificaron 41 horas, destinando 33 horas para el desarrollo esperado.
+Para el cierre, todas las tareas presupuestadas fueron realizadas. Se planificaron 41 horas, destinando 33 horas para el desarrollo esperado.
 
 \subsection{Sprint 5 (11/07/20 - 115/07/20)}\label{sprint-5-11072020---15072020}
 Para este \emph{Sprint} la idea es terminar los anexos, pulir el despliegue de la aplicación en la \emph{Play Store} y resolver los problemas finales.
@@ -162,13 +162,15 @@ Para el cierre el total de las tareas fueron completadas, se planificaron 41 hor
 
 \section{Estudio de viabilidad}
 
-Es esta parte se pretende analizar el coste / beneficio, como el apartado legal, en todo el proceso de desarrollo, en el caso de que se hubiera tenido que realizar en un entorno real. 
+En esta parte se pretende analizar el coste / beneficio de todo el proyecto, como el apartado legal en todo el proceso de desarrollo, en el caso de que se hubiera tenido que realizar en un entorno real. 
 
 
 \subsection{Viabilidad económica}
-La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer}~\cite{noauthor_freelancercom_2020}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, incluyendo un porcentaje de beneficios. En mi caso la estimación inicial de las horas fue de 250 horas.
+La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer},~\cite{noauthor_freelancercom_2020}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, incluyendo un porcentaje de beneficios. En mi caso la estimación inicial de las horas fue de 250 horas.
 
-Otra de las vías para obtener ingresos es mediante los anuncios que nos ofrece \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y videos, con los que tener un retorno de dinero. Ya que la idea es que la aplicación este disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. Aunque esto este disponible, para contabilizar los costes es algo despreciable, ya que es complicado tener una gran repercusión en las primeras etapas de proyecto, o incluso una vez finalizado. 	
+Otra de las vías para obtener ingresos es mediante los anuncios ofrecidos por \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y vídeos con los que tener un retorno de dinero. La idea es que la aplicación este disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. 
+
+Aunque la app disponga de publicidad, se desestimará para el cálculo del beneficio, ya que es complicado tener una gran repercusión en las primeras etapas de proyecto, o incluso una vez finalizado. 	
 
 \subsubsection{Coste hardware}
 Se desglosa el coste de los dispositivos usados para la implementación, suponiendo que la amortización del pc de sobremesa es aproximadamente de 5 años y de 2 años para el \emph{smartphone}, con la duración del proyecto de 1 mes.
@@ -188,10 +190,10 @@ Se desglosa el coste de los dispositivos usados para la implementación, suponie
 \end{table}
 
 \subsubsection{Coste software}
-El coste de los librerías, \emph{cloud services}, entornos de desarrollo, licencias, cursos, máquinas virtuales, entre otros, han sido de uso gratuito, dando lugar a un coste software de 0 euros.
+El coste de las librerías, \emph{cloud services}, entornos de desarrollo, licencias, cursos, máquinas virtuales, entre otros, han sido de uso gratuito, dando lugar a un coste software de 0 euros.
 
 \subsubsection{Coste personal}
-El proyecto fue llevado por un solo trabajador, que se encargaba del desarrollo de software y la planificación. El número de horas inicialmente pensado fue de 250 horas, siendo este trabajador autónomo. Se considera el siguiente salario:
+El proyecto fue llevado por un solo trabajador, que se encargaba del desarrollo de software y la planificación. El tiempo inicialmente estimado fue de 250 horas. Siendo el trabajador autónomo se considera el siguiente salario:
 
 \begin{table}[H]
 	\begin{center}
@@ -227,8 +229,8 @@ En lo referente a las cuotas de la seguridad social, para el año 2020, tenemos 
 
 Finalmente vemos que el coste del empleado para este proyecto es de 5286,15 €.
 
-\subsubsection{Costes varios}
-Otros costes que también se deben de tener en cuenta en el proyecto
+\subsubsection{Otros costes}
+Son otro tipo de gastos que también se deben tener en cuenta.
 
 \begin{table}[H]
 	\begin{center}
