--- a/docs/latex/tex/6_Trabajos_relacionados.tex
+++ b/docs/latex/tex/6_Trabajos_relacionados.tex
@@ -1,3 +1,13 @@
 \capitulo{6}{Trabajos relacionados}
 
-Este apartado sería parecido a un estado del arte de una tesis o tesina. En un trabajo final grado no parece obligada su presencia, aunque se puede dejar a juicio del tutor el incluir un pequeño resumen comentado de los trabajos y proyectos ya realizados en el campo del proyecto en curso. 
+Al tratarse de una herramienta muy joven, salió en el 2018, por lo que lleva apenas dos años en el mercado. Cada vez empieza a ver más documentación al respecto, cursos y foros en los que se tratan los temas. Entiendo que esto se debe a que Google esta apostando fuerte por el lenguaje. 
+
+No me he basado en trabajo anteriores, pero si que he buscado mucha información y me he documentado en gran cantidad de sitios,algunos de los cuales son :
+
+
+\begin{itemize}
+	\item Flutter sdk , donde está toda la documentación oficial~\href{https://flutter.dev/}{web}.
+	\item Canal oficial de  ~\href{https://www.youtube.com/watch?v=ukLBCRBlIkk&list=PLjxrf2q8roU1kMpfyJ4EY0pID2oRHtvGm}{flutter} en youtube, donde se comenta el Widget de la semana.
+	\item Todo lo referente a~\href{https://api.dart.dev/stable/2.8.4/index.html}{dart}.
+	\item Canal de youtube sobre ~\href{https://www.youtube.com/channel/UCP4bf6IHJJQehibu6ai__cg}{firebase}.
+\end{itemize}
