--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -247,18 +247,18 @@ Son otro tipo de gastos que también se deben tener en cuenta.
 \end{table}
 
 \subsubsection{Coste total proyecto}
-El coste total del proyecto es la suma de los costes anteriores, que nos da un importe de 5399,9 €, a esto le tenemos que aplicar el correspondiente incremento del impuesto de valor añadido, que es~\cite{noauthor_freelancercom_2020} del 21\%, por lo que el coste total del proyecto es de 6533,9 €.
+El coste total del proyecto es la suma de los costes anteriores, el cual da un importe de 5399,9 €, a esto le tenemos que aplicar el correspondiente incremento del impuesto de valor añadido, que es~\cite{noauthor_freelancercom_2020} del 21\%, por lo que el coste total del proyecto es de 6533,9 €.
 
 \subsubsection{Beneficios}
-La idea es que la aplicación se distribuya de manera gratuita a través de la cuenta de \emph{Google Play}, tiene publicidad pero al comienzo de arrancar los beneficios que retornará serán prácticamente nulos.
+La idea es que la aplicación se distribuya de manera gratuita a través de la cuenta de \emph{Google Play}, pero a pesar de tener publicidad los beneficios que retornará serán prácticamente nulos.
 
-Por lo que la vía de obtener ingresos como freelance, puede ser incrementar el coste del proyecto por un 15\%, de tal manera que nos podamos asegurar ese beneficio, además de garantizarnos ante un incremento de las horas planificadas, seguir teniendo ese margen de beneficio.
+Por lo que la vía de obtener ingresos como freelance, puede ser incrementar el coste del proyecto un 15\%, con el fin de asegurar ese beneficio. Esto garantiza que ante un incremento de las horas planificadas, siga existiendo margen de beneficio.
 
 El nuevo coste total del proyecto sería entonces de 6209,89 €, que añadiendo el impuesto de valor añadido, se queda en 7513,96 €.
 
 \subsection{Viabilidad legal}
 
-Para el completar el proyecto han sido necesarias gran multitud de herramientas,a continuación, en la tabla \ref{tabla:Licencias}, se expondrán las principales que fueron utilizadas.
+Para el completar el proyecto han sido necesarias gran multitud de herramientas, a continuación, en la tabla \ref{tabla:Licencias}, se expondrán las principales que fueron utilizadas.
 
 
 \begin{table}[H]
@@ -287,7 +287,7 @@ Para el completar el proyecto han sido necesarias gran multitud de herramientas,
 	\label{tabla:Licencias}
 \end{table}
 
-Aclarar que de las herramientas anteriores, las dos que aparecen como licencia gratuita, es debido a la escalabilidad de aplicación. Hace referencia que a partir de una cantidad de usuarios/consultas tienes que pagar por el servicio para el caso de firebase console. Para el caso de admob, depende del número de clicks en los anuncios, impuestos y regulaciones varias, por lo que en mi caso, es una aplicación pequeña, siendo el servicio gratuito con los beneficios para Google.
+Aclarar que de las herramientas anteriores, las dos que aparecen como licencia gratuita, es debido a la escalabilidad de aplicación. Hace referencia que a partir de una cantidad de usuarios/consultas tienes que pagar por el servicio para el caso de firebase console. Para el caso de admob, depende del número de clicks en los anuncios, impuestos y regulaciones varias. En mi caso es una aplicación pequeña, siendo el servicio gratuito con los beneficios para Google.
 
 \subsubsection{Imágenes y material gráfico}
 
@@ -320,7 +320,7 @@ Aclarar que de las herramientas anteriores, las dos que aparecen como licencia g
 \end{table}
 
 \subsection{Herramientas}
-En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalidades que ya han sido implementadas, todas ellas se pueden encontrar en la siguiente \href{https://pub.dev/}{web}. Estos se integran en el fichero pubspec.yaml. En este caso se usaron: 
+En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalidades que ya han sido implementadas. Todas ellas se pueden encontrar en la siguiente \href{https://pub.dev/}{web}. Estos se integran en el fichero pubspec.yaml, siendo este muy importante. Para el proyecto se usaron: 
 
 
 \begin{table}[H]
@@ -367,14 +367,14 @@ En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalida
 \end{table}
 
 \subsection{Licencia aplicación}
-Estudiando las compatibilidades con el total de las licencias, donde más problemas encontramos es con la licencia Apache 2.0, ya que es de las más restrictivas. No me impide la comercialización (free-to-play), que es justo lo que quiero, pero en el caso de que modifique el código fuente de algunas de las herramientas, si que tendría más problemas,pero no, ya que solo las uso.
+Estudiando todas las compatibilidades de las licencias, donde más problemas encontramos es en la licencia Apache 2.0, ya que es de las más restrictivas. No impide la comercialización (free-to-play), que es justo lo que se pretende, pero en el caso de que modifique el código fuente de algunas de las herramientas, si que tendría más problemas, pero no se da el caso, ya que solo se usan.
 
-Revisando los juegos, hay que detenerse en:
+Revisando los juegos hay que detenerse en:
 
 \begin{itemize}
-	\item \textbf{Derecho de autor o \emph{Copyright}}: no se infringe, ya que este protege el código fuente, aplicación y recursos artísticos cosa que se han hecho desde cero, como obra nueva.
+	\item \textbf{Derecho de autor o \emph{Copyright}}: no se infringe, ya que este protege el código fuente, aplicación y recursos artísticos. En este caso se hizo desde cero toda la aplicación, por lo que no afecta.
 	\item \textbf{Propiedad industrial}: no se infringe, no hay patentes encontradas. 
-	\item \textbf{Trademark:} sin problema, no se puede apropiar de la palabra serpiente / snake o cuatro en raya, por lo que se puede llamar así.
+	\item \textbf{Trademark o marca registrada:} sin problema, no se puede apropiar de la palabra serpiente / snake o cuatro en raya, por lo que se puede llamar así.
 \end{itemize}
 
 Por lo tanto el trabajo final de grado tiene:
